# blog-generator

./: .gitignore  Cargo.toml
src/: main.rs
src/templates/: index.html
