[package]
authors = ["Jonathan Tremesaygues <jonathan.tremesaygues@slaanesh.org>"]
edition = "2018"
name = "blog-generator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
tera = "1"
toml = "0"
